# ci-cd-sergio-er

./: MatrixMult.py  README.md  dockerfile  environment.yml  pyproject.toml  setup.py  testing.py
.github/workflows/: python-package-conda.yml
matrix_multiplication_yourusername.egg-info/: PKG-INFO  SOURCES.txt
tests/: test_matrix_operations.py
