[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "matrix_multiplication_sergioer"
version = "0.1.0"
description = "A package for performing matrix multiplication and validation."
readme = "README.md"
authors = [
    { name = "Sergio Rodriguez", email = "sergioer@bu.edu" }
]
license = { file = "LICENSE" }
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
